# pybind11_project_template

TMP/: CMakeLists.txt  Functions.cmake  clean.bat  run_tests.bat
TMP/TMP_lib/: CMakeLists.txt
TMP/TMP_lib/include/: CMakeLists.txt
TMP/TMP_lib/include/TMP/: CMakeLists.txt  test.h
TMP/TMP_lib/src/: CMakeLists.txt  test.cpp
TMP/TMP_pybind/: CMakeLists.txt  main.cpp
TMP/TMP_test/: CMakeLists.txt  main.cpp
TMP/tests/: test.py
